--- a/practice/exercise-06-1.html
+++ b/practice/exercise-06-1.html
@@ -31,12 +31,10 @@
       .data(data)
       .enter()
       .append('div')
-        .style({
-            'width': function (d){ return d * 20 + 'px'; },
-            'height': '20px',
-            'background-color': 'red',
-            'margin-bottom': '5px'
-          });
+        .style('width',  function (d){ return d * 20 + 'px'; })
+        .style('height', '20px')
+        .style('background-color', 'red')
+        .style('margin-bottom', '5px');
 
     d3.select('body')
       .insert('button', ':first-child')
