--- a/practice/exercise-12.html
+++ b/practice/exercise-12.html
@@ -40,12 +40,10 @@
       .data(data)
       .enter()
       .append('circle')
-      .attr({
-        'cx': function(d, i){ return (50 * i) + 20; },
-        'cy': function(d, i){ return 50; },
-         'r': function(d, i){ return d * 4; },
-      'fill': 'red'
-      });
+        .attr('cx', function(d, i){ return (50 * i) + 20; })
+        .attr('cy', function(d, i){ return 50; })
+        .attr('r',  function(d, i){ return d * 4; })
+        .attr('fill', 'red');
 
     d3.select('button')
       .on('click', function(){
