--- a/practice/exercise-14.html
+++ b/practice/exercise-14.html
@@ -41,11 +41,11 @@
   var data = [0, 150, 200, 300, 500, 1000];
   var svg = d3.select('body').append('svg');
 
-  var yScale = d3.scale.linear()
+  var yScale = d3.scaleLinear()
     .domain([0, 1000])
     .range([300, 0]);
 
-  var xScale = d3.scale.linear()
+  var xScale = d3.scaleLinear()
     .domain([0, 1000])
     .range([0, 500]);
 
