--- a/practice/exercise-01.html
+++ b/practice/exercise-01.html
@@ -20,6 +20,11 @@
   <script type="text/javascript">
     // code here...
 
+	var foo = d3.selectAll('.div1');
+	foo.text('Hello D3.JS!');
+
+	var joo = d3.selectAll('div');
+	joo.text('Hello D3.Js!!')
 
   </script>
 
