--- a/practice/exercise-02.html
+++ b/practice/exercise-02.html
@@ -24,7 +24,10 @@
 
   <script type="text/javascript">
     // code here...
-
+d3.selectAll('.div1')
+  .text('Hello D3.JS!')
+  .style({'color':'red',
+          'font-size':'30px'});
 
   </script>
 
