--- a/practice/exercise-03-1.html
+++ b/practice/exercise-03-1.html
@@ -17,6 +17,15 @@
   <script type="text/javascript">
     // code here...
 
+for(var i = 1; i<=10; i++){
+d3.selectAll('body')
+  .insert('div')
+  .text('Hello '+i)
+  .style({'color':'white',
+          'background-color':'red',
+          'font-size':'30px'});
+}
+	
 
   </script>
 
