--- a/practice/exercise-05.html
+++ b/practice/exercise-05.html
@@ -16,7 +16,16 @@
   -->
 
   <script type="text/javascript">
-
+	d3.select("svg")
+	  .append("circle")
+	  .attr({
+		cx:50,
+		cy:50,
+		r:35})
+      .style({'fill':'red'})
+  
+  
+  
   </script>
 
 </body>
