--- a/practice/exercise-03.html
+++ b/practice/exercise-03.html
@@ -15,7 +15,10 @@
 
   <script type="text/javascript">
     // code here...
-
+d3.selectAll('body')
+  .insert('div')
+  .text('Hello')
+  .style({'color':'white','background-color':'red','width':'200px','height':'300px'})
 
   </script>
 
